Add Courses Hero Widget and related css and svg files

--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -33,7 +33,9 @@ Author URI: https://fariaslab.com/
   'layout/home-clients',
   'layout/home-blog',
   'layout/about-hero',
-  'layout/about-summary';
+  'layout/about-summary',
+  'layout/about-team',
+  'layout/courses-hero';
 
 // Components
 @import
