--- a/_inc/assets/sass/abstracts/_variables.sass
+++ b/_inc/assets/sass/abstracts/_variables.sass
@@ -8,6 +8,8 @@ $wgp-lightgrey: #9C9B98
 $wgp-darkgrey: #4D4D4D
 $wgp-darkgrey-footer: #464542
 
+$wgp-avatar-bg: #D8D8D8
+
 $wgp-lightgreen: #5AE7CC
 $wgp-green: #00c2b4
 $wgp-green-hover: #009B90
@@ -16,3 +18,8 @@ $wgp-orange: #FF8900
 $wgp-orange-hover: #E67C00
 $wgp-darkorange: #FF5100
 $wgp-darkorange-hover: #C53F01
+
+
+// Recurring Font Families
+
+$wgp-gilroy-font: 'Gilroy', sans-serif
