--- a/_inc/assets/sass/base/_base.sass
+++ b/_inc/assets/sass/base/_base.sass
@@ -1,7 +1,7 @@
 // WGP Basic Styles
 
 body
-  font: 300 20px/28px 'Gilroy', sans-serif
+  font: 300 20px/28px $wgp-gilroy-font
   color: $wgp-darkgrey
   max-width: 100%
 
@@ -113,6 +113,21 @@ section
     margin-bottom: 1px
     transition: fill .2s
 
+.icon-wrap
+  @include flex-align(center, center)
+  width: 50px
+  height: 50px
+  border-radius: 50%
+
+  .icon-tune, .icon-chat, .icon-manual, .icon-brochure
+    width: 20px
+
+  .icon-documents
+    width: 19px
+
+  .icon-stairs, .icon-website
+    width: 18px
+
 .icon-list
   display: flex
   text-align: center
@@ -126,10 +141,6 @@ section
       margin-left: -15px
 
   .icon-wrap
-    @include flex-align(center, center)
-    width: 50px
-    height: 50px
-    border-radius: 50%
     overflow: hidden
     position: relative
     margin: 0 auto 9px
@@ -144,22 +155,13 @@ section
   .icon-img
     position: relative
 
-  .icon-tune, .icon-chat, .icon-manual, .icon-brochure
-    width: 20px
-
-  .icon-documents
-    width: 19px
-
-  .icon-stairs, .icon-website
-    width: 18px
-
 .team-avatar-wrap
   flex-shrink: 0
   width: 80px
   height: 80px
   border-radius: 50%
   overflow: hidden
-  background: #D8D8D8
+  background: $wgp-avatar-bg
   margin-right: 12px
 
   .avatar-img
@@ -173,6 +175,94 @@ section
   letter-spacing: 1.6px
   margin-bottom: 7px
 
+.wgp-2-cols-details
+  padding-bottom: 16px
+
+  > .inner-wrap
+    @include desktop-side-padding(64px)
+    @include flex-align(space-between)
+
+  .block-list
+    width: calc(100% * 500 / 1080)
+    letter-spacing: 1.2px
+
+  .block-list-item
+    position: relative
+    border-radius: 8px
+    border: 1px solid $wgp-grey-border
+    padding: 28px 40px
+
+    &:not(:last-child)
+      margin-bottom: 32px
+
+  .icon-wrap
+    position: absolute
+    top: 19px
+    left: -25px
+    border: 1px solid $wgp-grey-border
+    background: #fff
+
+  .block-title
+    margin-bottom: 2px
+    font-weight: 800
+
+  .check-list
+    width: calc(100% * 460 / 1080)
+
+  .section-title
+    margin-bottom: 18px
+
+  .check-list-item
+    padding-left: 29px
+    position: relative
+    letter-spacing: 1.2px
+
+    &:not(:last-child)
+      margin-bottom: 26px
+
+  .check-icon
+    width: 20px
+    height: 20px
+    position: absolute
+    left: 0
+    top: 3px
+
+.testimonial-list
+  letter-spacing: 1.2px
+
+  .testimonial-list-item
+    position: relative
+    background: $wgp-grey-bg
+    border-radius: 16px
+
+  .icon-quote
+    position: absolute
+    left: 10px
+    top: 11px
+    width: 48px
+
+  .testimonial-text
+    padding: 33px 60px 33px 40px
+    position: relative
+
+  .author-wrap
+    position: absolute
+    padding: 17px 23px 20px
+    background: #fff
+    border-radius: 8px
+
+  .author-name
+    white-space: nowrap
+
+  .author-company
+    white-space: nowrap
+    margin-top: -2px
+    text-transform: uppercase
+    font-size: 14px
+    line-height: 17px
+    font-weight: 800
+
+
 @media only screen and (max-width: 1239px)
 
   section > .inner-wrap
@@ -182,6 +272,9 @@ section
     font-size: 32px
     line-height: 40px
     letter-spacing: 1.6px
+
+  .wgp-2-cols-details > .inner-wrap
+    @include tablet-side-padding(64px)
 
 
 @media only screen and (max-width: 1023px)
@@ -208,6 +301,20 @@ section
 
     .icon-wrap
       margin: 0 11px 0 0
+
+  .wgp-2-cols-details
+
+    > .inner-wrap
+      @include tablet-side-padding(40px)
+      display: block
+
+    .block-list
+      width: auto
+      max-width: 500px
+      margin-bottom: 50px
+
+    .check-list
+      width: auto
 
 
 @media only screen and (max-width: 767px)
@@ -251,3 +358,27 @@ section
 
   .icon-list
     margin-left: 0
+
+  .wgp-2-cols-details
+
+    > .inner-wrap
+      @include mobile-side-padding(57px)
+
+    .block-list
+      letter-spacing: 1px
+
+    .block-list-item
+      padding: 34px 24px 26px 32px
+
+      &:not(:last-child)
+        margin-bottom: 57px
+
+    .icon-wrap
+      left: 32px
+      top: -25px
+
+    .check-list
+      letter-spacing: 1px
+
+      &:not(:last-child)
+        margin-bottom: 16px
