--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -35,7 +35,17 @@ Author URI: https://fariaslab.com/
   'layout/about-hero',
   'layout/about-summary',
   'layout/about-team',
-  'layout/courses-hero';
+  'layout/courses-hero',
+  'layout/courses-details',
+  'layout/translation-hero',
+  'layout/translation-details',
+  'layout/clients-hero',
+  'layout/clients-testimonials',
+  'layout/search-form',
+  'layout/sidebar',
+  'layout/blog-hero',
+  'layout/blog-posts',
+  'layout/blog-single';
 
 // Components
 @import
