Update misc minor styles and stuff

--- a/_inc/assets/sass/abstracts/_variables.sass
+++ b/_inc/assets/sass/abstracts/_variables.sass
@@ -16,6 +16,7 @@ $wgp-green-hover: #009B90
 
 $wgp-orange: #FF8900
 $wgp-orange-hover: #E67C00
+$wgp-orange-error: #EC6233
 $wgp-darkorange: #FF5100
 $wgp-darkorange-hover: #C53F01
 
