--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: We Go Places
 Text Domain: wgp
-Version: 0.1.0
+Version: 0.1.2
 Description: Custom WordPress theme for a client website called We Go Places by Beatriz Saiani
 Author: Farias Lab E.I.
 Author URI: https://fariaslab.com/
@@ -197,6 +197,9 @@ section > .inner-wrap {
   display: inline-block;
   position: relative;
   border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  outline: none;
 }
 .btn-primary:before {
   display: block;
@@ -219,7 +222,7 @@ section > .inner-wrap {
   background-color: #00c2b4;
   transition: background-color 0.2s;
 }
-.btn-primary:hover .inner-wrap {
+.btn-primary:hover .inner-wrap, .btn-primary:active .inner-wrap {
   background-color: #009B90;
 }
 .btn-primary .btn-text {
@@ -412,6 +415,53 @@ section > .inner-wrap {
   font-weight: 800;
 }
 
+.wgp-form .form-label {
+  display: block;
+}
+.wgp-form .form-label:not(:last-child) {
+  margin-bottom: 32px;
+}
+.wgp-form .form-label .label-text {
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 1px;
+  margin-bottom: 1px;
+  cursor: pointer;
+  transition: color 0.2s;
+}
+.wgp-form .form-label.error-label .label-text {
+  color: #EC6233;
+}
+.wgp-form .form-label .form-field {
+  display: block;
+  background: #F6F4EF;
+  border-radius: 4px;
+  border: 1px solid #E0DED8;
+  font-family: "Gilroy", sans-serif;
+  font-size: 20px;
+  width: 100%;
+  padding: 10px 16px;
+  letter-spacing: 1.2px;
+  outline: none;
+  transition: background-color 0.2s, border-color 0.2s;
+}
+.wgp-form .form-label .form-field[type=text] {
+  height: 48px;
+}
+.wgp-form .form-label .form-field.textarea {
+  max-width: 100%;
+  min-width: 100%;
+  min-height: 144px;
+}
+.wgp-form .form-label.error-label .form-field {
+  background: #F6E0D9;
+  border-color: #EC6233;
+}
+.wgp-form .form-label .form-field:active, .wgp-form .form-label .form-field:focus {
+  background: #E3F8F6;
+  border-color: #00c2b4;
+}
+
 @media only screen and (max-width: 1239px) {
   section > .inner-wrap {
     padding: 0 calc(100% * 48 / 768);
@@ -540,6 +590,15 @@ section > .inner-wrap {
   }
   .wgp-2-cols-details .check-list:not(:last-child) {
     margin-bottom: 16px;
+  }
+
+  .wgp-form .form-label:not(:last-child) {
+    margin-bottom: 27px;
+  }
+  .wgp-form .form-label .label-text {
+    font-size: 14px;
+    letter-spacing: 0.88px;
+    margin-bottom: 3px;
   }
 }
 .wgp-site-header {
@@ -2174,23 +2233,6 @@ section > .inner-wrap {
     margin-right: calc(100% * -20 / 375 - 40px);
   }
 }
-.search-form .label-text {
-  font-size: 16px;
-  line-height: 28px;
-  margin-bottom: 1px;
-  cursor: pointer;
-}
-.search-form .search-input {
-  display: block;
-  background: #F6F4EF;
-  border-radius: 4px;
-  border: 1px solid #E0DED8;
-  font-family: "Gilroy", sans-serif;
-  width: 100%;
-  height: 48px;
-  padding: 10px;
-}
-
 .sidebar-wrap {
   width: calc(100% * 360 / 1080);
 }
@@ -2585,6 +2627,249 @@ section > .inner-wrap {
   }
   .wgp-blog-single .post-content > *:not(:last-child) {
     margin-bottom: 24px;
+  }
+}
+.wgp-contact-hero {
+  background: #F6F4EF;
+  overflow: visible;
+}
+.wgp-contact-hero > .inner-wrap {
+  padding: 33px 80px;
+  padding-bottom: 33px;
+  position: relative;
+}
+.wgp-contact-hero .section-title {
+  margin-bottom: 11px;
+  font-size: 48px;
+  line-height: 63px;
+}
+.wgp-contact-hero .alert-wrap {
+  position: absolute;
+  top: calc(100% - 23px);
+  left: 0;
+  width: 100%;
+}
+.wgp-contact-hero .form-alert {
+  letter-spacing: 1.2px;
+}
+.wgp-contact-hero .form-alert .main-alert {
+  padding: 9px 80px;
+  padding-right: 14px;
+  display: inline-flex;
+  position: relative;
+  color: #fff;
+  font-weight: 800;
+  border-radius: 0 8px 8px 0;
+  margin-bottom: 13px;
+  max-width: calc(100% * 540 / 1240);
+}
+.wgp-contact-hero .form-alert .main-alert:before {
+  display: block;
+  content: "";
+  position: absolute;
+  right: 100%;
+  top: 0;
+  width: 50vw;
+  height: 100%;
+  background: inherit;
+}
+.wgp-contact-hero .form-alert .main-alert > * {
+  position: relative;
+}
+.wgp-contact-hero .form-alert.success .main-alert {
+  background: #00c2b4;
+}
+.wgp-contact-hero .form-alert.failure .main-alert {
+  background: #EC6233;
+}
+.wgp-contact-hero .alert-icon {
+  fill: #fff;
+}
+.wgp-contact-hero .alert-icon.check-icon {
+  width: 20px;
+  height: 20px;
+  margin: 4px 8px 4px 0;
+}
+.wgp-contact-hero .alert-icon.error-icon {
+  width: 22px;
+  height: 18px;
+  margin: 5px 8px 5px 0;
+}
+.wgp-contact-hero .more-alert-text {
+  padding: 0 80px;
+  padding-right: 0;
+  max-width: calc(100% * 540 / 1240);
+}
+
+@media only screen and (max-width: 1239px) {
+  .wgp-contact-hero > .inner-wrap {
+    padding: 33px calc(100% * 48 / 768);
+  }
+  .wgp-contact-hero .main-alert {
+    padding: 9px calc(100% * 48 / 768);
+    padding-right: 14px;
+  }
+  .wgp-contact-hero .more-alert-text {
+    padding: 0 calc(100% * 48 / 768);
+    padding-right: 0;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .wgp-contact-hero {
+    padding: 23px 0 0;
+  }
+  .wgp-contact-hero .section-title {
+    font-size: 32px;
+    line-height: 40px;
+    letter-spacing: 1.6px;
+    margin-bottom: 14px;
+  }
+}
+@media only screen and (max-width: 767px) {
+  .wgp-contact-hero {
+    padding-bottom: 3px;
+  }
+  .wgp-contact-hero > .inner-wrap {
+    padding: 21px calc(100% * 20 / 375);
+  }
+  .wgp-contact-hero .section-title {
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 1px;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-bottom: 5px;
+  }
+  .wgp-contact-hero .body-text {
+    font-size: 24px;
+    line-height: 32px;
+    letter-spacing: 0;
+  }
+  .wgp-contact-hero .alert-wrap {
+    top: calc(100% - 8px);
+  }
+  .wgp-contact-hero .form-alert {
+    letter-spacing: 1px;
+  }
+  .wgp-contact-hero .main-alert {
+    padding: 11px calc(100% * 20 / 375);
+    display: flex;
+    border-radius: 0;
+    margin-bottom: 17px;
+    max-width: none;
+  }
+  .wgp-contact-hero .alert-icon.check-icon {
+    margin: 2px 8px 2px 0;
+  }
+  .wgp-contact-hero .alert-icon.error-icon {
+    margin: 3px 8px 3px 0;
+  }
+  .wgp-contact-hero .more-alert-text {
+    padding: 0 calc(100% * 20 / 375);
+    max-width: none;
+  }
+}
+.wgp-contact-form {
+  padding-bottom: 24px;
+}
+.wgp-contact-form > .inner-wrap {
+  padding: 56px 80px;
+  display: flex;
+  justify-content: space-between;
+}
+.wgp-contact-form .form-wrap {
+  width: calc(100% * 360 / 1080);
+  min-width: 288px;
+}
+.wgp-contact-form .message-label {
+  margin-bottom: 23px;
+}
+.wgp-contact-form .label-text.required:after {
+  content: "*";
+  color: #FF5100;
+}
+.wgp-contact-form p.required {
+  font-size: 14px;
+  letter-spacing: 0.8px;
+  margin-bottom: 23px;
+}
+.wgp-contact-form p.required:before {
+  content: "*";
+  color: #FF5100;
+}
+.wgp-contact-form .btn-text:before {
+  display: block;
+  content: attr(data-submit);
+}
+.wgp-contact-form .btn-text.submitting:before {
+  content: attr(data-submitting);
+}
+.wgp-contact-form .info-wrap {
+  width: calc(100% * 540 / 1080);
+}
+.wgp-contact-form .info-title {
+  font-weight: 800;
+  margin-bottom: 6px;
+  letter-spacing: 1.2px;
+}
+.wgp-contact-form .info-text {
+  margin-bottom: 27px;
+}
+.wgp-contact-form .hf-phone-link {
+  margin-bottom: 35px;
+}
+.wgp-contact-form .whatsapp-skype {
+  margin-bottom: 40px;
+}
+.wgp-contact-form .alert-wrap {
+  display: none;
+}
+
+@media only screen and (max-width: 1239px) {
+  .wgp-contact-form > .inner-wrap {
+    padding: 56px calc(100% * 48 / 768);
+  }
+}
+@media only screen and (max-width: 767px) {
+  .wgp-contact-form {
+    padding-bottom: 44px;
+  }
+  .wgp-contact-form > .inner-wrap {
+    padding: 20px calc(100% * 20 / 375);
+    display: block;
+  }
+  .wgp-contact-form .form-wrap {
+    padding-bottom: 40px;
+    width: auto;
+  }
+  .wgp-contact-form .form-wrap.success-state {
+    overflow: hidden;
+    visibility: hidden;
+    height: 130px;
+  }
+  .wgp-contact-form .message-label {
+    margin-bottom: 15px;
+  }
+  .wgp-contact-form .info-wrap {
+    width: auto;
+    padding-top: 32px;
+    border-top: 1px solid #E0DED8;
+  }
+  .wgp-contact-form .info-title {
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 10px;
+  }
+  .wgp-contact-form .info-text {
+    letter-spacing: 1px;
+    margin-bottom: 11px;
+  }
+  .wgp-contact-form .links-wrap {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .wgp-contact-form .hf-phone-link, .wgp-contact-form .whatsapp-skype {
+    margin: 0 23px 15px 0;
   }
 }
 .hf-phone-link {
