--- a/_inc/assets/sass/layout/_contact-form.sass
+++ b/_inc/assets/sass/layout/_contact-form.sass
@@ -10,6 +10,7 @@
   .form-wrap
     width: calc(100% * 360 / 1080)
     min-width: 288px
+    min-height: 97px
 
   .message-label
     margin-bottom: 23px
