Center client logos on clients page

--- a/_inc/assets/sass/layout/_home-clients.sass
+++ b/_inc/assets/sass/layout/_home-clients.sass
@@ -24,6 +24,9 @@
     display: flex
     flex-wrap: wrap
 
+  &.clients-page .logos-list
+    justify-content: center
+
   .logos-list-item
     @include flex-align(center, center)
     width: 120px
