Increased spacing between header logo and hero text in the home page

--- a/_inc/assets/sass/layout/_home-hero.sass
+++ b/_inc/assets/sass/layout/_home-hero.sass
@@ -86,7 +86,7 @@
       @include mobile-side-padding
 
     .section-header
-      padding: 0
+      padding: 26px 0 0
       margin-bottom: 13px
       display: flex
       flex-direction: column-reverse
