--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -3,7 +3,7 @@
 /*
 Theme Name: We Go Places
 Text Domain: wgp
-Version: 0.1.2
+Version: 0.1.3
 Description: Custom WordPress theme for a client website called We Go Places by Beatriz Saiani
 Author: Farias Lab E.I.
 Author URI: https://fariaslab.com/
@@ -25,6 +25,7 @@ Author URI: https://fariaslab.com/
 // Layout
 @import
   'layout/site-header',
+  'layout/fixed-footer',
   'layout/site-footer',
   'layout/home-hero',
   'layout/home-training',
