--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: We Go Places
 Text Domain: wgp
-Version: 0.1.2
+Version: 0.1.3
 Description: Custom WordPress theme for a client website called We Go Places by Beatriz Saiani
 Author: Farias Lab E.I.
 Author URI: https://fariaslab.com/
@@ -150,6 +150,11 @@ img, svg {
   flex-direction: column;
 }
 
+.site-footer-wrap {
+  position: relative;
+  z-index: 2;
+}
+
 section {
   overflow: hidden;
 }
@@ -195,6 +200,7 @@ section > .inner-wrap {
 
 .btn-primary {
   display: inline-block;
+  text-decoration: none;
   position: relative;
   border-radius: 8px;
   border: none;
@@ -314,7 +320,7 @@ section > .inner-wrap {
   height: 80px;
   border-radius: 50%;
   overflow: hidden;
-  background: #D8D8D8;
+  background: #F6F4EF;
   margin-right: 12px;
 }
 .team-avatar-wrap .avatar-img {
@@ -889,6 +895,97 @@ section > .inner-wrap {
     margin-right: 0;
   }
 }
+.fixed-footer {
+  position: fixed;
+  z-index: 1;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.fixed-footer .btn-ask-quote {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 100%;
+  border-radius: 0;
+  transform: translateY(100%);
+  transition: transform 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.fixed-footer .btn-ask-quote:before {
+  display: none;
+}
+.fixed-footer .btn-ask-quote .inner-wrap {
+  border-radius: 0;
+}
+.fixed-footer.show, .fixed-footer .btn-ask-quote.show {
+  transform: translateY(0);
+}
+.fixed-footer .consent-section {
+  position: relative;
+  background: #4D4D4D;
+  font-weight: 800;
+}
+.fixed-footer .consent-wrap {
+  padding: 6px 80px;
+}
+.fixed-footer .btn-close-consent {
+  display: inline;
+  margin-right: 2px;
+}
+.fixed-footer .btn-close-consent .close-icon {
+  display: inline-block;
+  margin-bottom: 4px;
+  width: 10px;
+  height: 10px;
+  fill: #00c2b4;
+  transition: fill 0.2s;
+}
+.fixed-footer .btn-close-consent:hover .close-icon, .fixed-footer .btn-close-consent:active .close-icon {
+  fill: #009B90;
+}
+.fixed-footer .consent-text {
+  display: inline;
+  color: #fff;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 1px;
+  margin-right: 1px;
+}
+.fixed-footer .btn-ok-consent {
+  display: inline;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: 1.2px;
+  margin: 5.5px 0;
+  color: #00c2b4;
+  transition: color 0.2s;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.fixed-footer .btn-ok-consent:hover, .fixed-footer .btn-ok-consent:active {
+  color: #009B90;
+}
+
+@media only screen and (max-width: 1239px) {
+  .fixed-footer .consent-wrap {
+    padding: 6px calc(100% * 48 / 768);
+  }
+}
+@media only screen and (max-width: 767px) {
+  .fixed-footer .consent-wrap {
+    padding: 6px calc(100% * 20 / 375);
+  }
+  .fixed-footer .btn-close-consent {
+    display: none;
+  }
+  .fixed-footer .consent-text {
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: 0.8px;
+  }
+}
 .wgp-site-footer {
   background: #464542;
   color: #fff;
@@ -1078,7 +1175,7 @@ section > .inner-wrap {
     padding: 0 calc(100% * 20 / 375);
   }
   .wgp-home-hero .section-header {
-    padding: 0;
+    padding: 26px 0 0;
     margin-bottom: 13px;
     display: flex;
     flex-direction: column-reverse;
@@ -1393,6 +1490,9 @@ section > .inner-wrap {
 .wgp-home-clients .logos-list {
   display: flex;
   flex-wrap: wrap;
+}
+.wgp-home-clients.clients-page .logos-list {
+  justify-content: center;
 }
 .wgp-home-clients .logos-list-item {
   display: flex;
