Add dynamic text to fixed footer and minor refactor

--- a/_inc/assets/sass/layout/_fixed-footer.sass
+++ b/_inc/assets/sass/layout/_fixed-footer.sass
@@ -1,6 +1,6 @@
-// Fixed Footer
+// WGP Fixed Footer
 
-.fixed-footer
+.wgp-fixed-footer
   position: fixed
   z-index: 1
   width: 100%
@@ -75,13 +75,13 @@
 
 @media only screen and (max-width: 1239px)
 
-  .fixed-footer .consent-wrap
+  .wgp-fixed-footer .consent-wrap
     @include tablet-side-padding(6px)
 
 
 @media only screen and (max-width: 767px)
 
-  .fixed-footer
+  .wgp-fixed-footer
 
     .consent-wrap
       @include mobile-side-padding(6px)
