Add 404 template, its img and sass

--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -54,3 +54,6 @@ Author URI: https://fariaslab.com/
   'components/hf-phone-link',
   'components/hf-icon-link',
   'components/btn-menu-icon';
+
+// Pages
+@import 'pages/404';
