--- a/_inc/assets/sass/layout/_site-header.sass
+++ b/_inc/assets/sass/layout/_site-header.sass
@@ -34,6 +34,8 @@
         font-size: 12px
         line-height: 14px
         padding-bottom: 13px
+        width: 26px
+        overflow: hidden
 
       &:first-child a
         margin-right: 15px
