--- a/_inc/assets/sass/style.scss
+++ b/_inc/assets/sass/style.scss
@@ -3,7 +3,7 @@
 /*
 Theme Name: We Go Places
 Text Domain: wgp
-Version: 0.1.3
+Version: 0.1.4
 Description: Custom WordPress theme for a client website called We Go Places by Beatriz Saiani
 Author: Farias Lab E.I.
 Author URI: https://fariaslab.com/
@@ -44,8 +44,8 @@ Author URI: https://fariaslab.com/
   'layout/clients-testimonials',
   'layout/sidebar',
   'layout/blog-hero',
+  'layout/post-block',
   'layout/blog-posts',
-  'layout/blog-single',
   'layout/contact-hero',
   'layout/contact-form';
 
@@ -56,4 +56,7 @@ Author URI: https://fariaslab.com/
   'components/btn-menu-icon';
 
 // Pages
-@import 'pages/404';
+@import
+  'pages/single',
+  'pages/search',
+  'pages/404';
